<resources>
    <string name="app_name">Untangle Custom</string>
    <string name="title_home">Home</string>
    <string name="title_game">Game</string>
    <string name="title_options">Options</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="new_custom_game">New game</string>
    <string name="max_count_links_for_one_dot">Max link count for one dot</string>
    <string name="dot_count">Dot count</string>
    <string name="_10">10</string>
    <string name="_4">4</string>
    <string name="radius">Radius</string>
    <string name="_25">25</string>
    <string name="start_game">START GAME</string>
    <string name="continue_game">Continue game</string>
    <string name="win">WIN</string>
</resources>